@@ -1,4 +1,5 @@
-#! /usr/bin/env python3
+#!/usr/bin/env python3
+
 """
 Python script to interface as a mock OCSP responder.
 """
