@@ -1,2 +1,3 @@
-#!/bin/bash
+#!/usr/bin/env bash
+
 exec llvm-cov gcov "$@"
