@@ -10,6 +10,7 @@ Changed:
   * Test and example targets are excluded from the `ALL` target.
     * All test targets can be built using the `mongo_c_driver_tests` target.
     * All example targets can be built using the `mongo_c_driver_examples` target.
+  * Use `#!/usr/bin/env bash` instead of `#!/bin/sh` in uninstall script generated by `ENABLE_UNINSTALL=ON`.
 
 Deprecated:
 
